force-app/main/default/objects/Patient_Milestone_Task__c/Patient_Milestone_Task__c.object-meta.xml
<CustomObject>
    <label>Patient Milestone Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Milestone Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>