force-app/main/default/objects/Patient_Milestone_Task__c/fields/Apheresis_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Apheresis_Shipment__c</fullName>
    <formula>Study_Milestone_Task__r.Apheresis_Shipment__c</formula>
    <label>Apheresis Shipment</label>
    <type>Checkbox</type>
</CustomField>