force-app/main/default/objects/Patient_Milestone_Task__c/fields/Comment_c__c.field-meta.xml
<CustomField>
    <fullName>Comment_c__c</fullName>
    <label>Comment__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>