force-app/main/default/objects/Patient_Milestone_Task__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <label>Courier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>BioCair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>