force-app/main/default/objects/Patient_Milestone_Task__c/fields/Drug_Product_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Drug_Product_Shipment__c</fullName>
    <formula>Study_Milestone_Task__r.Drug_Product_Shipment__c</formula>
    <label>Drug Product Shipment</label>
    <type>Checkbox</type>
</CustomField>