force-app/main/default/objects/Patient_Milestone_Task__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Patient Milestone Tasks</relationshipLabel>
    <relationshipName>Patient_Milestone_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>