force-app/main/default/objects/Patient_Milestone_Task__c/fields/Patient_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Patient_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Milestone</label>
    <referenceTo>Patient_Milestone__c</referenceTo>
    <relationshipLabel>Patient Milestone Tasks</relationshipLabel>
    <relationshipName>Patient_Milestone_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>