force-app/main/default/objects/Patient_Milestone_Task__c/fields/Study_Milestone_Task__c.field-meta.xml
<CustomField>
    <fullName>Study_Milestone_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Milestone Task</label>
    <referenceTo>Study_Milestone_Task__c</referenceTo>
    <relationshipLabel>Patient Milestone Tasks</relationshipLabel>
    <relationshipName>Patient_Milestone_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>