force-app/main/default/objects/Patient_Milestone_Task__c/fields/Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner__c</fullName>
    <label>Task Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logistics Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Clinical Site</fullName>
            </value>
            <value>
                <fullName>Manufacturing Scheduler</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Warehouse Operator</fullName>
            </value>
            <value>
                <fullName>Clinical site user Queue</fullName>
                <isActive>false</isActive>
                <label>Clinical site user Queue</label>
            </value>
            <value>
                <fullName>Logistic Coordinator Queue</fullName>
                <isActive>false</isActive>
                <label>Logistic Coordinator Queue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>