force-app/main/default/objects/Patient_Milestone_Task__c/fields/Verify__c.field-meta.xml
<CustomField>
    <fullName>Verify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify</label>
    <type>Checkbox</type>
</CustomField>