force-app/main/default/objects/Patient_Milestone_Task__c/listViews/Logistic_Coordinator_Queue_Patient_Milestone_Task1.listView-meta.xml
<ListView>
    <fullName>Logistic_Coordinator_Queue_Patient_Milestone_Task1</fullName>
    <filterScope>Queue</filterScope>
    <label>Supply Chain Queue</label>
    <queue>Logistic_Coordinator_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>