force-app/main/default/objects/Patient_Milestone_Task__c/listViews/Logistic_Queue_Patient_Milestone_Task1.listView-meta.xml
<ListView>
    <fullName>Logistic_Queue_Patient_Milestone_Task1</fullName>
    <filterScope>Queue</filterScope>
    <label>Manufacturing Scheduler</label>
    <queue>Manufacturing_Scheduler</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>