force-app/main/default/objects/Patient_Milestone_Task__c/listViews/Logistic_Queue_Patient_Milestone_Task2.listView-meta.xml
<ListView>
    <fullName>Logistic_Queue_Patient_Milestone_Task2</fullName>
    <filterScope>Queue</filterScope>
    <label>Logistic Queue</label>
    <queue>Logistic_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>