force-app/main/default/objects/Patient_Milestone_Task__c/listViews/Manufacturing_Scheduler_Patient_Milestone_Task.listView-meta.xml
<ListView>
    <fullName>Manufacturing_Scheduler_Patient_Milestone_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Manufacturing Scheduler</label>
    <queue>Manufacturing_Scheduler</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>