force-app/main/default/objects/Patient_Milestone_Task__c/listViews/QA_Patient_Milestone_Task.listView-meta.xml
<ListView>
    <fullName>QA_Patient_Milestone_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>QA</label>
    <queue>QA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>