force-app/main/default/objects/Patient_Milestone_Task__c/listViews/Supply_Chain_Queue_Patient_Milestone_Task.listView-meta.xml
<ListView>
    <fullName>Supply_Chain_Queue_Patient_Milestone_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Manufacturing Scheduler</label>
    <queue>Manufacturing_Scheduler</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>